force-app/main/default/objects/Expense_Entitlement__c/Expense_Entitlement__c.object-meta.xml
<CustomObject>
    <label>Expense Entitlement</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Expense Entitlement Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expense Entitlements</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>