force-app/main/default/objects/Expense_Entitlement__c/fields/Bike_Allowance_Amount_per_Km__c.field-meta.xml
<CustomField>
    <fullName>Bike_Allowance_Amount_per_Km__c</fullName>
    <description>The allowance amount for bike travel</description>
    <label>Bike Allowance Amount per Km</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>