force-app/main/default/objects/Expense_Entitlement__c/fields/Car_Allowance_Amount_per_km__c.field-meta.xml
<CustomField>
    <fullName>Car_Allowance_Amount_per_km__c</fullName>
    <description>The allowance amount for car travel</description>
    <label>Car Allowance Amount per km</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>