force-app/main/default/objects/Expense_Entitlement__c/fields/Class_A_Cities_Amount__c.field-meta.xml
<CustomField>
    <fullName>Class_A_Cities_Amount__c</fullName>
    <label>Class A Cities (Amount)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>