force-app/main/default/objects/Expense_Entitlement__c/fields/DA_Allowance__c.field-meta.xml
<CustomField>
    <fullName>DA_Allowance__c</fullName>
    <label>DA Allowance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>