force-app/main/default/objects/Expense_Entitlement__c/fields/Entitlement_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Entitlement_Allowed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Entitlement Allowed</label>
    <type>Checkbox</type>
</CustomField>