force-app/main/default/objects/Expense_Entitlement__c/fields/Expense_Category__c.field-meta.xml
<CustomField>
    <fullName>Expense_Category__c</fullName>
    <label>Expense Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily Allowance</fullName>
            </value>
            <value>
                <fullName>Travel Allowance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>