force-app/main/default/objects/Expense_Entitlement__c/fields/Expense_Entitlement_Name__c.field-meta.xml
<CustomField>
    <fullName>Expense_Entitlement_Name__c</fullName>
    <label>Expense Entitlement Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>