force-app/main/default/objects/Expense_Entitlement__c/fields/Flight_allowance__c.field-meta.xml
<CustomField>
    <fullName>Flight_allowance__c</fullName>
    <defaultValue>false</defaultValue>
    <description>is checked to true if flight allowance is allowed</description>
    <label>Flight allowance</label>
    <type>Checkbox</type>
</CustomField>