force-app/main/default/objects/Expense_Entitlement__c/fields/Flight_Allowance_Amount__c.field-meta.xml
<CustomField>
    <fullName>Flight_Allowance_Amount__c</fullName>
    <description>The allowance amount for flight travel. If the value is zero, there is no flight allowance</description>
    <label>Flight Allowance Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>