force-app/main/default/objects/Expense_Entitlement__c/fields/Other_Cities_Amount__c.field-meta.xml
<CustomField>
    <fullName>Other_Cities_Amount__c</fullName>
    <label>Other Cities (Amount)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>