force-app/main/default/objects/Expense_Entitlement__c/fields/TA_Allowance__c.field-meta.xml
<CustomField>
    <fullName>TA_Allowance__c</fullName>
    <label>TA Allowance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>