force-app/main/default/objects/Expense_Entitlement__c/fields/Train_Allowance_Amount__c.field-meta.xml
<CustomField>
    <fullName>Train_Allowance_Amount__c</fullName>
    <label>Train Allowance Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>