force-app/main/default/objects/Expense_Entitlement__c/recordTypes/Daily_Allowance.recordType-meta.xml
<RecordType>
    <fullName>Daily_Allowance</fullName>
    <active>true</active>
    <label>Daily Allowance/Travel Allowance</label>
</RecordType>