force-app/main/default/objects/Expense_Entitlement__c/recordTypes/Travel_Allowance.recordType-meta.xml
<RecordType>
    <fullName>Travel_Allowance</fullName>
    <active>false</active>
    <label>Travel Allowance</label>
</RecordType>