force-app/main/default/objects/Expense_Entitlement__c/validationRules/SO_Flight_Car_Restriction.validationRule-meta.xml
<ValidationRule>
    <fullName>SO_Flight_Car_Restriction</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Role__c, &quot;SO&quot;),
  OR(
    ISPICKVAL(Transport_Allowance__c, &quot;Flight&quot;),
    ISPICKVAL(Transport_Allowance__c, &quot;Car&quot;)
  )
)</errorConditionFormula>
    <errorMessage>Sales Officers (SO) are not entitled to Flight or Car allowances.</errorMessage>
</ValidationRule>