force-app/main/default/objects/Expense_Entitlement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Role__c</columns>
    <columns>DA_Allowance__c</columns>
    <columns>TA_Allowance__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <group>System_Admin_Group</group>
    </sharedTo>
</ListView>